--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "@angular/router": "~3.4.0",
     "angular-in-memory-web-api": "~0.2.4",
     "core-js": "^2.4.1",
+    "jquery": "^3.1.1",
     "rxjs": "5.0.1",
     "semantic-ui": "^2.2.7",
     "systemjs": "0.19.40",
